updated writeup to include link to github and added license

--- a/writeup.tex
+++ b/writeup.tex
@@ -70,7 +70,7 @@
 \end{center}
 
 The purpose of this art piece is to explore the original meaning of Utopia as it can be interpreted as "good place" or "no place". The piece is what looks like a hyperlink stating "Utopia," but when you click on it, the link literally breaks and the letters fly away from the mouse.\\
-The code is written in the lua programming language using \href{https://love2d.org/wiki/Main_Page}{love2d} and can be found here.
+The code is written in the lua programming language using \href{https://love2d.org/wiki/Main_Page}{love2d} and can be found \href{https://github.com/josiest/404}{here}.
 
 \begin{figure}[H]
     \centering
